[tool.poetry]
name = "hitron-exporter"
version = "0.1.0"
description = "A Prometheus exporter for the Hitron CGN series CPE"
authors = ["Sam Morris <sam@robots.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
prometheus-client = "^0.16.0"
gunicorn = {version = "^20.1.0", optional = true}
setproctitle = {version = "^1.2.3", optional = true}
# ipalib is broken by <https://jasonralph.org/?p=997>
cryptography = "<38"
# required by ipalib, but we need to specify here in order to enable the ldap extra
ipapython = {version = "^4.8.9", optional = true, extras = ["ldap"]}
ipaclient = {version = "^4.8.9", optional = true}
urllib3 = "^1.26.14"
prometheus-flask-exporter = "^0.22.2"

[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
mypy = "^1.0.1"
python-dotenv = "^0.21.1"
types-urllib3 = "^1.26.25.6"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# This bit is maintained by hand
[tool.poetry.extras]
freeipa-vault = ["ipaclient", "ipapython"]
container = ["gunicorn", "setproctitle"]

[tool.flake8]
extend-ignore = [
    # See https://github.com/PyCQA/pycodestyle/issues/373
    "E203",
    # black will enforce maximum line lengths
    "E501",
]

[tool.mypy]
strict = true
packages = "hitron_exporter"
