[tool.poetry]
name = "hitron-exporter"
version = "0.1.0"
description = "A Prometheus exporter for the Hitron CGN series CPE"
authors = ["Sam Morris <sam@robots.org.uk>"]
#packages = [
#  { include = "hitron_exporter", from = "src" },
#]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
prometheus-client = "^0.16.0"
gunicorn = {version = "^20.1.0", optional = true}
setproctitle = {version = "^1.2.3", optional = true}
urllib3 = "^1.26.14"
prometheus-flask-exporter = "^0.22.3"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
mypy = "^1.0.1"
python-dotenv = "^1.0.0"
types-urllib3 = "^1.26.25.6"
pylint = "^2.16.2"
pytest = "^7.2.1"
pytest-httpserver = "^1.0.6"
trustme = "^0.9.0"
pytest-github-report = "^0.0.1"
pytest-github-actions-annotate-failures = "^0.1.8"
pytest-pilot = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# This bit is maintained by hand
[tool.poetry.extras]
container = ["gunicorn", "setproctitle"]

[tool.flake8]
extend-ignore = [
    # See https://github.com/PyCQA/pycodestyle/issues/373
    "E203",
    # black will enforce maximum line lengths
    "E501",
]

[tool.mypy]
strict = true
packages = "hitron_exporter"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    # <https://github.com/smarie/python-pytest-pilot/issues/19>
    "ignore:A private pytest class or function was used:pytest.PytestDeprecationWarning"
]
testpaths = ["tests"]

[tool.bandit]
targets = ["src"]
skips = ["B404", "B607", "B603"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-allow-list = "dependency_injector"
